@@ -11,6 +11,11 @@ is $params->to_string,      'foo=b%3Bar&baz=23', 'right format';
 is $params2->to_string,     'x=1&y=2',           'right format';
 is $params->to_string,      'foo=b%3Bar&baz=23', 'right format';
 is_deeply $params->params, ['foo', 'b;ar', 'baz', 23], 'right structure';
+is $params->[0], 'foo',  'right value';
+is $params->[1], 'b;ar', 'right value';
+is $params->[2], 'baz',  'right value';
+is $params->[3], 23,     'right value';
+is $params->[4], undef,  'no value';
 $params->pair_separator(';');
 is $params->to_string, 'foo=b%3Bar;baz=23', 'right format';
 is "$params", 'foo=b%3Bar;baz=23', 'right format';
